Prepare jobs link in footer. Fix alignment.

--- a/assets/stylesheets/_footer.scss
+++ b/assets/stylesheets/_footer.scss
@@ -7,7 +7,7 @@
   padding: $space-xl 0 21px;
   text-align: center;
 
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: $screen-md-min) {
     padding: $space-xxl 0;
     text-align: left;
   }
@@ -28,7 +28,7 @@
   line-height: $space-xl;
   font-size: $font-size-small;
 
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: $screen-md-min) {
     margin-top: 0;
     line-height: $space-xxl;
     float: right;
@@ -37,7 +37,7 @@
 }
 
 .footer-nav {
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: $screen-md-min) {
     display: inline;
   }
 
@@ -56,7 +56,7 @@
     color: $blue-gray;
     margin-left: ($space-lg - 4px); // 4px white-space
 
-    @media (min-width: $screen-sm-min) {
+    @media (min-width: $screen-md-min) {
       margin-left: ($grid-gutter-width - 4px); // 4px white-space
     }
 
@@ -66,9 +66,15 @@
   }
 }
 
-.link-group {
-  margin-left: ($space-lg - 4px); // 4px white-space
+.page-nav {
+  li:first-child {
+    a {
+      margin-left: 0;
+    }
+  }
+}
 
+.social-nav {
   @media (min-width: $screen-md-min) {
     margin-left: ($grid-gutter-width - 4px); // 4px white-space
   }
